<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SheduleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:text="@string/editTextStart"
            android:textSize="18sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/editTextEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_horizontal"
            android:inputType="textPersonName"
            android:text="@string/edit_text_end"
            android:textSize="18sp" />

        <Button
            android:id="@+id/buttonOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorButtonNormal"
            android:drawableRight="@drawable/pero"
            android:text="@string/button_ok"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="8dp"
                        android:text="Инфо" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textViewInfoJob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="8dp"
                        android:textSize="24sp"
                        tools:text="инфо" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <TextView
                        android:id="@+id/textViewInfoJob2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:padding="8dp"
                        android:textSize="24sp"
                        tools:text="инфо" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </TableLayout>

        </FrameLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>